--- a/Easy Shopping/Easy Shopping.html
+++ b/Easy Shopping/Easy Shopping.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Easy Shopping Via Mobile - CSS</title>
+    <title>Easy Shopping Via Mobile - CSS test</title>
   </head>
   <body>
     <main id="wrapper">
@@ -30,7 +30,7 @@
           <a>About</a>
           <a>Contact</a>
         </header>
-        <img src="./Illustration-3-3.png" alt="Illustration-image" />
+        <img src="./assets/Illustration-3-3.png" alt="Illustration-image" />
       </section>
     </main>
   </body>
