--- a/Easy Shopping/index.html
+++ b/Easy Shopping/index.html
@@ -30,7 +30,7 @@
           <a>About</a>
           <a>Contact</a>
         </header>
-        <img src="./Illustration-3-3.png" alt="Illustration-3-3" />
+        <img src="./assets/Illustration-3-3.png" alt="Illustration-3-3" />
       </section>
     </div>
   </body>
